--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 
                     <section class="cta">
                         <div id="cta_header">
-                        <p id="cta_text">Have a project in mind? We would love to hear from you!<a id="cta_link" href="getintouch">GET IN TOUCH WITH US</a></p>
+                        <p id="cta_text">Have a project in mind? We would love to hear from you!<a id="cta_link" href="#">GET IN TOUCH WITH US</a></p>
                         
                     </div>
                     </section>
